# PastedIR

./: .gitignore  .gitmodules  Dockerfile  README.md  add_languages.sh  backup_db.sh  docker-compose.dev.yml  docker-compose.yml  example.env  pyproject.toml  requirements.txt  start_celery.sh  test_celery.py  test_redis.py
api/: duck_ai.py  urls.py  views.py
compose/development/django/: Dockerfile  start-dev
compose/production/django/: Dockerfile  entrypoint  start
compose/production/django/celery/beat/: start
compose/production/django/celery/worker/: start
compose/production/postgres/: Dockerfile
pastebinir/: __init__.py  apps.py  celery.py  settings.py  settings_dev.py  urls.py
static/css/: dark-mode.css
static/js/: language-search.js  theme-manager.js  view-paste.js
templates/: 404.html  about.html  base.html  create.html  history.html  home.html  raw.html  raw_clean.html  view.html
website/: models.py  scheduler_tasks.py  tasks.py  urls.py  views.py
website/management/commands/: cleanup_expired_pastes.py  run_scheduler.py
website/migrations/: 0001_initial.py
